# englishy

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_ai_modules.py  test_individual_modules.py  test_specific_module.py
.streamlit/: config.toml
note/: prompt_improvement_plan.yaml  プロジェクト要素ドキュメント_20250715.md  プロジェクト要素辞書_20250715.md  プロジェクト要素辞書_20250720.md  プロジェクト辞書_20250719.md  プロジェクト辞書_20250719_updated.md  定期更新用プロンプト_20250717.md
src/: __init__.py  __main__.py  main.py
src/ai/: __init__.py  english_extractor.py  grammar_analyzer.py  grammar_dictionary.py  grammar_utils.py  llm_grammar_analyzer.py  mindmap_maker.py  openai_client.py  outline_creater.py  query_expander.py  query_refiner.py  report_writer.py  test_llm_grammar_analyzer.py
src/ai/utils/: __init__.py  stream_writer.py
src/app/: __init__.py  app.py  config.py  report.py  research.py
src/app/utils/: __init__.py  lm.py  mindmap_utils.py
src/chunker/: __init__.py  chunker.py
src/encoder/: __init__.py  openai.py
src/parser/: __init__.py  parser.py
src/retriever/: __init__.py  search_result.py
src/retriever/article_search/: __init__.py  faiss.py
src/retriever/web_search/: __init__.py  duckduckgo_search.py
src/utils/: __init__.py  lm.py  logging.py  report_manager.py  web_retriever.py
tests/: test_actual_integration.py  test_full_integration.py  test_grammar_analyzer.py  test_grammar_utils.py  test_keyword_feature.py  test_llm_grammar_analyzer.py  test_mindmap_maker.py  test_optimal_outline_structure.py  test_outline_creater_integration.py  test_outline_creater_keywords.py  test_outline_output_demo.py  test_query_expander.py  test_query_expander_output.py  test_query_refiner.py  test_real_application.py  test_real_outline_generation.py  test_references_writer.py  test_related_topics_writer.py  test_simple_integration.py
