[project]
name = "englishy"
version = "0.1.0"
description = "English Learning Deep Research Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.5.43",
    "streamlit>=1.41.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "duckduckgo-search>=7.4.4",
    "litellm>=1.0.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3",
    "pyright>=1.1.391",
    "ruff>=0.8.4",
]

[tool.ruff]
target-version = "py39"
include = ["*.py"]
line-length = 119

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "PIE",
]
ignore = [
       "E266",  # too many leading '#' for block comment (E266)
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["englishy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double" 